--- a/Global News/index.html
+++ b/Global News/index.html
@@ -8,6 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+<header>
+    <div class="container">
+        <nav class="navbar bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand">Global <span class="bg-primary text-light p-2 rounded">News</span></a>
+                <div class="d-flex pe-2 pt-3">
+
+                    <p class="nav-item pe-3">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </p>
+                    <p class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">About</a>
+                    </p>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
 
 <body>
     <script src="js/connection.js"></script>
