--- a/Global News/index.html
+++ b/Global News/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+<!-- header start here  -->
 <header>
     <div class="container">
         <nav class="navbar bg-light">
@@ -26,9 +27,40 @@
         </nav>
     </div>
 </header>
+<hr class="mx-5">
+<!-- hender end hear  -->
 
 <body>
-    <script src="js/connection.js"></script>
+    <!-- menu start here  -->
+    <section class="container ">
+        <div id="catagories-Section" class="d-flex  m-3">
+
+        </div>
+
+    </section>
+    <!-- menu end here  -->
+    <!-- card start here  -->
+    <main>
+        <section class="container">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="..." class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- card end here  -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
