--- a/Global News/index.html
+++ b/Global News/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Global News</title>
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/c48dab0a95.js" crossorigin="anonymous"></script>
 </head>
 <!-- header start here  -->
 <header>
@@ -33,7 +36,7 @@
 <body>
     <!-- menu start here  -->
     <section class="container ">
-        <div id="catagories-Section" class="d-flex  m-3">
+        <div id="catagories-Section" class="d-flex text-center m-3">
 
         </div>
 
@@ -41,26 +44,19 @@
     <!-- menu end here  -->
     <!-- card start here  -->
     <main>
-        <section class="container">
+        <section id="fuckfahim" class="container">
+
             <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="..." class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
+
             </div>
+
+
         </section>
     </main>
 
     <!-- card end here  -->
     <script src="js/app.js"></script>
+    <script src="js/app2.js"></script>
 </body>
 
 </html>
