--- a/Global News/index.html
+++ b/Global News/index.html
@@ -47,7 +47,7 @@
     <!-- menu end here  -->
     <!-- card start here  -->
     <main>
-        <section id="fuckfahim" class="container">
+        <section id="card-container" class="container">
 
             <div class="card mb-3" style="max-width: 540px;">
 
