--- a/Global News/indexNew.html
+++ b/Global News/indexNew.html
@@ -46,9 +46,9 @@
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">var:It can be declared without initialization. <br>
-                    let:It can be declared without initialization. <br>
-                    const: It cannot be declared without initialization.
+                <div class="accordion-body">var:It can be declared without initialization. <br><br>
+                    let:It can be declared without initialization. <br><br>
+                    const: It cannot be declared without initialization.<br><br>
                 </div>
             </div>
         </div>
@@ -62,11 +62,11 @@
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                 data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">.map() executes the same code on every element in an array and returns a new
-                    array with the updated elements. <br>
+                    array with the updated elements. <br> <br>
                     .filter() checks every element in an array to see if it meets a certain criteria and returns a new
-                    array with the elements that return truthy for the criteria. <br>
+                    array with the elements that return truthy for the criteria. <br> <br>
                     .forEach(), is used to execute the same code on every element in an array but does not change the
-                    array and it returns undefined. <br>
+                    array and it returns undefined. <br> <br>
                     .find() method returns the value of the first element that passes a test. The find() method
                     executes a function for each array element. The find() method returns undefined if no elements are
                     found. The find() method does not execute the function for empty elements.
